--- a/src/Components/Item/styleItem.scss
+++ b/src/Components/Item/styleItem.scss
@@ -18,7 +18,7 @@ $button-hover: #565657;
 
 body {
   font-family: 'Pontano Sans', sans-serif;
-  font-size: 1.125rem;
+  font-size: 1rem;
   line-height: 1.5;
   margin: 0;
   padding: 0;
@@ -26,6 +26,14 @@ body {
   background: $white;
   text-rendering: optimizeLegibility;
 }
+
+.tituloFila p {
+  text-transform: lowercase;
+  &:first-letter {
+  text-transform: uppercase;
+  }
+}
+
 
 ul {
   padding: 0;
@@ -80,6 +88,10 @@ img {
   max-width: 100%;
   height: auto;
   object-fit: cover;
+}
+
+.item {
+  height: 100vh;
 }
 
 nav {
@@ -238,14 +250,24 @@ footer {
 }
 
 .product-image {
-  display: none;
+  display: block;
 }
 
 .image-list {
   li {
-    margin: 0;
+    margin: 2px;
+  }
+  img {
+    height: 20rem;
+    width: 100%;
+    transition: opacity 0.3s ease;
+    cursor: pointer;
+    &:hover {
+      opacity: 0.7;
+    }
   }
 }
+
 
 @media  (min-width: 768px) {
   .product-image img, .image-list img {
@@ -253,9 +275,8 @@ footer {
   }
 
   .product-image {
-    display: block;
     img {
-      height: 52vh;
+      height: 72vh;
       &.active {
         display: block;
         margin: 0 0 0.75rem 0;
@@ -270,7 +291,7 @@ footer {
       margin: 0 0.75rem 0 0;
       flex-basis: 100%;
       &:nth-child(3) {
-        margin: 0;
+        margin: 1;
       }
     }
     img {
