--- a/src/Components/CategoryMoldes/styleCategoryMoldes.css
+++ b/src/Components/CategoryMoldes/styleCategoryMoldes.css
@@ -47,7 +47,6 @@
 } */
 
 
-
 .grid {
 	/* position: relative;
 	margin: 0 auto;
@@ -57,25 +56,29 @@
 	position: relative;
 	margin: 0 auto;
     overflow: hidden;
-    align-items: center;
     justify-content: center;
 	list-style: none;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 	/* max-width: 1000px; */
 }
 
 /* Common style */
 .grid figure {
 	position: relative;
-	float: left;
 	overflow: hidden;
-	margin: 10px 1%;
+	margin: 0.75rem 1%;
 	min-width: 320px;
 	max-width: 480px;
 	max-height: 360px;
 	width: 100%; /*Esto es para modificar el ancho*/
-	background: #3085a3;
+	background: #7ac8e4;
 	text-align: center;
-	cursor: pointer;
+	cursor: pointer;	
+	display: flex;
+    align-items: inherit;
+    justify-content: center;
 }
 
 .grid figure img {
@@ -87,10 +90,10 @@
 }
 
 .grid figure figcaption {
-	padding: 2em;
+	padding: 2rem;
 	color: #fff;
 	text-transform: uppercase;
-	font-size: 1.25em;
+	font-size: 1.25rem;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
@@ -136,17 +139,18 @@
 
 figure.effect-lily img {
 	max-width: none;
-	width: -webkit-calc(100% + 50px);
-	width: calc(100% + 50px);
+	/* width: -webkit-calc(100% + 50px);
+	width: calc(100% + 50px); */
+	width: 100%;
 	opacity: 0.7;
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
 	-webkit-transform: translate3d(-40px,0, 0);
-	transform: translate3d(-40px,0,0);
+	transform: scale(1.1);
 }
 
 figure.effect-lily figcaption {
-	text-align: left;
+	text-align: center;
 }
 
 figure.effect-lily figcaption > div {
@@ -155,7 +159,7 @@ figure.effect-lily figcaption > div {
 	left: 0;
 	padding: 2em;
 	width: 100%;
-	height: 50%;
+	height: 35%;
 }
 
 figure.effect-lily h2 {
@@ -168,13 +172,6 @@ figure.effect-lily h2 {
 	transition: transform 0.35s;
 }
 
-/* figure.effect-lily p {
-	color: rgba(255,255,255,0.8);
-	opacity: 0;
-	-webkit-transition: opacity 0.2s, -webkit-transform 0.35s;
-	transition: opacity 0.2s, transform 0.35s;
-} */
-
 figure.effect-lily:hover img {
 	opacity: 1;
 }
@@ -184,10 +181,3 @@ figure.effect-lily:hover h2 {
 	-webkit-transform: translate3d(0,0,0);
 	transform: translate3d(0,0,0);
 }
-
-/* figure.effect-lily:hover p {
-	-webkit-transition-delay: 0.05s;
-	transition-delay: 0.05s;
-	-webkit-transition-duration: 0.35s;
-	transition-duration: 0.35s;
-} */
