--- a/src/Components/CategoryMoldes/styleCategoryMoldes.css
+++ b/src/Components/CategoryMoldes/styleCategoryMoldes.css
@@ -59,7 +59,7 @@
     justify-content: center;
 	list-style: none;
 	width: 100%;
-	height: 100%;
+	/* height: 100%; */
 	object-fit: cover;
 	/* max-width: 1000px; */
 }
@@ -121,14 +121,15 @@
 	opacity: 0;
 } */
 
-.grid figure h2 {
+.grid figure h4 {
 	word-spacing: .3rem;
 	/* font-weight: 300; */
 	margin: 0;
 }
 
-.grid figure h2 span {
+.grid figure h4 span {
 	font-weight: 800;
+	color:#285262;
 }
 
 /* Individual effects */
@@ -162,12 +163,13 @@ figure.effect-lily figcaption > div {
 	height: 35%;
 }
 
-figure.effect-lily h2 {
+figure.effect-lily h4 {
 	-webkit-transform: translate3d(0,40px,0);
 	transform: translate3d(0,40px,0);
+	background: #f8f9fa;
 }
 
-figure.effect-lily h2 {
+figure.effect-lily h4 {
 	-webkit-transition: -webkit-transform 0.35s;
 	transition: transform 0.35s;
 }
@@ -177,7 +179,7 @@ figure.effect-lily:hover img {
 }
 
 figure.effect-lily:hover img,
-figure.effect-lily:hover h2 {
+figure.effect-lily:hover h4 {
 	-webkit-transform: translate3d(0,0,0);
 	transform: translate3d(0,0,0);
 }
