--- a/src/Components/Footer/styleFooter.css
+++ b/src/Components/Footer/styleFooter.css
@@ -42,7 +42,9 @@
 .copyright{
     background-color: #333333;
 } */
-
+p{
+    font-size: 0.85rem;
+}
 footer{
     background: var(--negro);
     width: 100%;
@@ -72,7 +74,7 @@ footer{
     justify-content: center;
     align-items: center;
     position: absolute;
-    bottom: 80%;
+    bottom: 90%;
     /* box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; */
     /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
     -webkit-box-shadow: 0px 1px 24px 1px rgba(20,143,143,1);
@@ -91,3 +93,27 @@ footer{
     color: white;
     margin-top: 3.5rem;
 }
+.columna_footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+@media (max-width:768px){
+    .columna_footer{
+    }
+    .footer_icono_fondo{
+        position: relative;
+        bottom: -1rem;
+        background-color: rgb(255, 255, 255);
+        border-radius: 50%;
+        /* width: 4rem;
+        height: 4rem; */
+        -webkit-box-shadow: 0px 1px 24px 1px rgba(20,143,143,1);
+        -moz-box-shadow: 0px 1px 24px 1px rgba(20,143,143,1);
+        box-shadow: 0px 1px 24px 1px rgba(20,143,143,1);
+        transform: scale(1);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        cursor: pointer;
+    }
+  }
