--- a/src/Components/Form/styleForm.css
+++ b/src/Components/Form/styleForm.css
@@ -87,7 +87,6 @@
 
 input {
     width: 100%;
-    height: 35px;
     padding: 7px;
     outline: none;
     border-radius: 5px;
@@ -109,7 +108,7 @@ textarea {
     min-width: 100%;
     width: 100%;
     max-height: 150px;
-    min-height: 150px;
+    min-height: 100px;
     padding: 7px;
     outline: none;
     border-radius: 5px;
@@ -121,4 +120,7 @@ textarea:focus {
 
 label {
     margin-top: 1rem;
+}
+.input_asunto{
+    color:gray;
 }
