--- a/src/Components/Footer/styleFooter.css
+++ b/src/Components/Footer/styleFooter.css
@@ -53,6 +53,8 @@ footer{
 .footer_a{
     padding-right: 0;
     padding-left: 0;
+    display: flex;
+    justify-content: center;
 }
 
 .footer_a a{
