--- a/src/Views/Home/styleHome.css
+++ b/src/Views/Home/styleHome.css
@@ -1,5 +1,5 @@
 .portada_imagen {
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     background-image: url("../../Assets/portada.png");
     background-repeat: no-repeat;
@@ -211,11 +211,18 @@
     margin: 1rem;
 }
 
-/* @media screen and  (min-width: 349px) and (max-width: 575px) {
-    .beneficios_texto{
-        padding-left: 7rem;
+@media screen and  (min-width: 349px) and (max-width: 575px) {
+    .portada_imagen {
+        height: 70vh;
+        width: 100%;
+        background-image: url("../../Assets/portada.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: inherit;
+        z-index: -1;
     }
-} */
+} 
 
 /*---------------------------------------------------------------------*/
 
