planta de reciclaje responsive

--- a/src/Views/Home/styleHome.css
+++ b/src/Views/Home/styleHome.css
@@ -222,6 +222,9 @@
         background-attachment: inherit;
         z-index: -1;
     }
+    .title{
+        font-size: 1.5rem;
+    }
 } 
 
 /*---------------------------------------------------------------------*/
