--- a/src/Views/PlantaReciclaje/stylePlantaReciclaje.css
+++ b/src/Views/PlantaReciclaje/stylePlantaReciclaje.css
@@ -89,3 +89,12 @@ h3 {
   font-family: 'Sofia Sans', sans-serif;
   font-size: 2.5rem;
 }
+
+@media screen and  (min-width: 349px) and (max-width: 575px) {
+  .title h2{
+      font-size: 2rem;
+  }
+  p {
+    font-size: 1rem;
+}
+} 
