--- a/src/Views/Home/styleHome.css
+++ b/src/Views/Home/styleHome.css
@@ -9,56 +9,17 @@
     z-index: -1;
 }
 
-/* .portada_texto {
-    height: 70vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 3rem;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    position: relative;
-    color: white;
-    text-align: left;
-    z-index: 1;
-}
-
-.portada_titulo {
-    font-family: 'Sacramento', cursive;
-    text-align: left;
-    font-size: 4rem;
-}
-
-.portada_subtitulo {
-    font-size: 1,5 rem;
-} */
-
 /*---------------------------------------------------------------------*/
 .mision {
     background-color: var(--negro);
     width: 100%;
     height: auto;
-    /* padding: 5rem 1rem;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-column-gap: 1rem;
-    grid-row-gap: 2rem; */
     align-items: center;
     justify-items: center;
+    overflow: hidden;
 }
-
-/* .flow--lg > * + * {
-    margin-top: 2em;
-}
-
-.flow > * + * {
-    margin-top: 1em;
-} */
 
 .mision_fondo {
-    /* grid-column: 2 / span 5;
-    grid-row: 1; */
     position: absolute;
 }
 
@@ -95,14 +56,10 @@
 .mision_imagen {
     margin: 0;
     height: 60vh;
-    /* width: 50%; */
     background-image: url('https://preciousplastic.com/images/hdiw-workspace.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: inherit;
-    /* background-attachment: fixed; */
-    /* grid-column: 7 / span 6;
-    grid-row: 1; */
 }
 
 /*---------------------------------------------------------------------*/
@@ -189,6 +146,7 @@
 }
 .beneficio_item{
     padding: 0rem 3.5rem;
+    margin:0rem;
 }
 
 .beneficios_numero{
