--- a/src/Components/CategoryMaquinas/styleCategoryMaquinas.css
+++ b/src/Components/CategoryMaquinas/styleCategoryMaquinas.css
@@ -10,3 +10,8 @@
     height: 100%;
     object-fit: cover;
 } */
+@media screen and  (min-width: 349px) and (max-width: 575px) {
+    .gallery_container h4{
+        font-size: 1.2rem;
+    }
+} 
