--- a/src/Components/CategoryMoldes/styleCategoryMoldes.css
+++ b/src/Components/CategoryMoldes/styleCategoryMoldes.css
@@ -183,3 +183,9 @@ figure.effect-lily:hover h4 {
 	-webkit-transform: translate3d(0,0,0);
 	transform: translate3d(0,0,0);
 }
+
+@media screen and  (min-width: 349px) and (max-width: 575px) {
+    .gallery_container h4{
+        font-size: 1.2rem;
+    }
+} 
