--- a/src/Views/Home/styleHome.css
+++ b/src/Views/Home/styleHome.css
@@ -203,7 +203,7 @@
         padding: 0;
         height: auto;
     }
-    img {
+    .clientes img {
         max-width: 60%;
         height: auto;
     }
